# helioseismic

./: .gitignore  README.md  pyproject.toml
data/: sdo_stereo_sync_csv.py  sdo_stereo_sync_down.py  sdo_stereo_sync_time.py  stereo_availability.py  stereo_summary.py  utils.py
scripts/: 01_build_stereo_catalog.py  02_match_observation_times.py  03_download_observations.py  04_build_dataset_manifest.py
src_old/: sdo_aia.py  sdo_farside_seismic.py  stereo_euvi.py  sync_euv.py  sync_euv_v2.py
src_old/pix2pix/: networks.py  pipeline.py  test.py  train.py
