[project]
name = "helioseismic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sunpy-soar>=1.12.0",
    "sunpy[all]>=8.0.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[tool.uv.sources]
drms = { git = "https://github.com/sunpy/drms" }
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
